chore: unify project formatting and update config files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,6 @@
       "@/*": ["*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "app/**/*.ts",
-    "app/**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+  "include": ["next-env.d.ts", "app/**/*.ts", "app/**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
