--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,15 @@
         "name": "next"
       }
     ],
-    "baseUrl": "app",
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["*"],
+      "@/i18n/*": ["i18n/*"],
+      "@/app/*": ["app/*"],
+      "@/messages/*": ["messages/*"],
+      "@/sanity/*": ["../sanity/*"]
     }
   },
-  "include": ["next-env.d.ts", "app/**/*.ts", "app/**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
