--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
     "husky": "^8.0.0",
+    "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
