--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@portabletext/react": "^3.2.1",
     "@portabletext/types": "^2.0.13",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@sanity/icons": "^3.7.4",
@@ -27,6 +30,7 @@
     "@sanity/vision": "^4.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "next-intl": "^4.3.4",
