--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sanity": "^4.4.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
