--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@portabletext/types": "^2.0.13",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -39,8 +42,10 @@
     "next-intl": "^4.3.4",
     "next-sanity": "^10.0.12",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-payment-inputs": "^1.2.0",
     "sanity": "^4.4.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
@@ -53,6 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-payment-inputs": "^1.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
     "husky": "^8.0.0",
