--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "jspdf": "^3.0.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.540.0",
     "next": "15.4.7",
     "next-intl": "^4.3.4",
@@ -45,6 +47,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-payment-inputs": "^1.2.0",
     "sanity": "^4.4.1",
     "styled-components": "^6.1.19",
